--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
@@ -85,6 +85,7 @@ Il nous dévoile aussi les nouveautés React gérer les mutations et soumissions
 - 📜 [Server-side rendering React in OCaml](https://sancho.dev/blog/server-side-rendering-react-in-ocaml): les devs de Ahrefs utilisent Reason-React. Ils ont réimplémenté `ReactDOMServer.renderToString` en OCaml pour pouvoir exécuter le SSR nativement et résoudre quelques problématiques. Leur SSR est maintenant 10x plus rapide que Node.js et 6x plus rapide que Bun. L'idée d'exécuter le SSR en langage natif est super intéressante, mais il va falloir pas mal de travail pour supporter les dernières innovations comme le streaming et les Server Components.
 - 📜 [HTMX is the Future](https://quii.dev/HTMX_is_the_Future): une critique des frameworks SPA, en particulier React. Propose d'utiliser une alternative: HTMX et des réponses hypermedia. Je trouve ça intéressant pour les devs backend qui veulent ajouter de l'intéractivité sans faire de JavaScript, mais pas certain que ça scale si bien que ça.
 - 📜 [Context, Composition, and Flexibility](https://kyleshevlin.com/context-composition-and-flexibility): propose d'utiliser le contexte React pour activer un rendu alternatif d'un composant.
+- 📜 [My Struggle With Remix](https://redd.one/blog/my-struggle-with-remix): retour d'expérience intéressant. L'auteur aime toujours beaucoup Remix, mais présente quelques challenges rencontrés.
 - 📜 [Pull to refresh from scratch as a React hook](https://www.strictmode.io/articles/react-pull-to-refresh)
 - 📜 [Creating an interactive spotlight border with CSS and React](https://www.julienthibeaut.xyz/blog/create-spotlight-border-with-react-css)
 - 📦 [Redwood 5.0](https://community.redwoodjs.com/t/redwood-v5-0-0-is-now-available/4830): support de React 18, TypeScript v5 et observabilité.
