--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
@@ -9,6 +9,12 @@ unlisted: true
 
 Salut à tous !
 
+Pub conférences
+
+Revert nylas ad
+
+Recherche alternant/stagiaire?
+
 <Todo />
 
 <!-- truncate -->
@@ -55,7 +61,7 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 The [Nylas Email and Calendar APIs](https://www.nylas.com/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content&utm_term) allow developers to build communications features that connect them to all major service providers in the world - with a single integration.
 
-Nylas makes selecting a use case and a server-side SDK language easy. You'll get a [step-by-step tutorial complete with a **ready-to-use React frontend**](https://www.nylas.com/blog/how-to-build-email-templates-with-react/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content=&utm_term=) and download-ready codebase with your API credentials. Stop building and maintaining individual integrations with multiple providers and [start launching email and calendar features](https://www.nylas.com/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content&utm_term) with guaranteed 99.99% uptime and no maintenance downtime.  
+Nylas makes selecting a use case and a server-side SDK language easy. You'll get a [step-by-step tutorial complete with a **ready-to-use React frontend**](https://www.nylas.com/blog/how-to-build-email-templates-with-react/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content=&utm_term=) and download-ready codebase with your API credentials. Stop building and maintaining individual integrations with multiple providers and [start launching email and calendar features](https://www.nylas.com/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content&utm_term) with guaranteed 99.99% uptime and no maintenance downtime.
 
 ## [Start building with Nylas for free!](https://dashboard.nylas.com/register?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content=&utm_term=)
 
