--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
@@ -94,7 +94,7 @@ Il nous dévoile aussi les nouveautés React gérer les mutations et soumissions
 - 📦 [Zact - Zod Server ACTions](https://github.com/pingdotgg/zact)
 - 📦 [Astro 2.4](https://astro.build/blog/astro-240/)
 - 📦 [server-only](https://www.npmjs.com/package/server-only): package React officiel qui permet d'empêcher l'import de code serveur dans les Client Components (voir la [doc Next.js](https://nextjs.org/docs/getting-started/react-essentials#keeping-server-only-code-out-of-client-components-poisoning)).
-- 📦 [Chadcn UI - Table and Data Table components](https://twitter.com/shadcn/status/1656019263394836480)
+- 📦 [shadcn UI - Table and Data Table components](https://twitter.com/shadcn/status/1656019263394836480)
 - 📦 [Million.js 2.3.1 - Astro support (beta)](https://twitter.com/aidenybai/status/1655088722222923776)
 - 📊 [State of React 2023 - Preliminary Discussions](https://github.com/Devographics/surveys/issues/85): il pourrait y avoir un sondage dédié à React cette année.
 - 👀 [RSCs on Rspack](https://twitter.com/_hyf0/status/1655538017669648385)
