--- a/website/newsletter/145/index.mdx
+++ b/website/newsletter/145/index.mdx
@@ -94,7 +94,7 @@ Note that it is a bit early to adopt Server Actions in production. They are in a
 - 📦 [Zact - Zod Server ACTions](https://github.com/pingdotgg/zact)
 - 📦 [Astro 2.4](https://astro.build/blog/astro-240/)
 - 📦 [server-only](https://www.npmjs.com/package/server-only): official React package to prevent the import of server code into Client Components (see [Next.js docs](https://nextjs.org/docs/getting-started/react-essentials#keeping-server-only-code-out-of-client-components-poisoning)).
-- 📦 [Chadcn UI - Table and Data Table components](https://twitter.com/shadcn/status/1656019263394836480)
+- 📦 [shadcn UI - Table and Data Table components](https://twitter.com/shadcn/status/1656019263394836480)
 - 📦 [Million.js 2.3.1 - Astro support (beta)](https://twitter.com/aidenybai/status/1655088722222923776)
 - 📊 [State of React 2023 - Preliminary Discussions](https://github.com/Devographics/surveys/issues/85): there might be a survey dedicated to React this year.
 - 👀 [RSCs on Rspack](https://twitter.com/_hyf0/status/1655538017669648385)
