--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
@@ -9,11 +9,9 @@ unlisted: true
 
 Salut à tous !
 
-Pub conférences
+RNC
 
-Revert nylas ad
-
-Recherche alternant/stagiaire?
+Vacances
 
 <Todo />
 
@@ -47,7 +45,8 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
-<Todo />
+- [Understanding React Concurrency](https://www.bbss.dev/posts/react-concurrency/)
+- 👥 [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam, 2-6 Juin) nous offre -5% sur les entrées (code "ThisWeekInReact5") et -10% sur les [workshops](https://reactsummit.com/react-workshops) (code "THISWEEKINREACT")
 
 <SubscribeFormEmbed />
 
@@ -71,7 +70,7 @@ We’ll tackle handling common interview questions, approaching the topic of gen
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -20% (code "REACTHEBDO").
 
 ---
 
