--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
@@ -45,7 +45,41 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
+- [Spotify - TV Spatial Navigation](https://engineering.atspotify.com/2023/05/tv-spatial-navigation/)
+- [Airbnb - Improving Performance with HTTP Streaming](https://medium.com/airbnb-engineering/improving-performance-with-http-streaming-ba9e72c66408)
+- [Using symbols to create type safe Remix handles without duck typing](https://www.wking.dev/library/using-symbols-to-create-type-safe-remix-handles-without-duck-typing)
+- [Remix Conf 2023 Playlist](https://www.youtube.com/watch?v=x-Wndjv040Q&list=PLXoynULbYuEBSoANKVl4nKzBBae7DM3JK)
+- [upgrade-remix](https://github.com/brophdawg11/upgrade-remix)
+- [Next.js Project Structure - New docs page](https://twitter.com/delba_oliveira/status/1659276340145582088)
+- [RSC Parser](https://rsc-parser.vercel.app/)
+- [This Month in React (April 2023)](https://www.reactiflux.com/transcripts/tmir-april-2023)
+- [You Might Not Need React Query](https://tkdodo.eu/blog/you-might-not-need-react-query) + https://twitter.com/TkDodo/status/1659908975502950405
+- [Custom Fetcher Hooks are Remix's Typesafe RPCs](https://www.jacobparis.com/content/remix-rpc-pattern)
+- [The Epic Stack](https://www.epicweb.dev/epic-stack)
+- [Why I’m excited about Server Actions](https://andrewingram.net/posts/why-excited-about-server-actions)
+- [Typing React Context In TypeScript](https://claritydev.net/blog/typing-react-context-in-typescript)
+- [I gambled against React and lost (and I don’t regret a thing)](https://goauthentik.io/blog/2023-05-04-i-gambled-against-react-and-lost): évoque le choix d'utiliser Lit et les Web Components en 2018.
+- [The JavaScript Ecosystem Is Delightfully Weird](https://fly.io/blog/js-ecosystem-delightfully-wierd/)
+- [What is Next.js App Router & Is it ready for the main stage?](https://engineering.udacity.com/what-is-next-js-app-router-is-it-ready-for-the-main-stage-bed07ef9519f)
+- [Using Apollo Client with Next.js 13: releasing an official library to support the App Router](https://www.apollographql.com/blog/announcement/frontend/using-apollo-client-with-next-js-13-releasing-an-official-library-to-support-the-app-router/)
+- [React Global State as Local State](https://webup.org/blog/react-global-state-as-local-state/)
+- [React reconciliation: how it works and why should we care](https://www.developerway.com/posts/reconciliation-in-react)
+- [Dodging the Vercel Tax: How to use an open-source alternative for Serverless Postgres, Redis, and Blob Storage](https://javascript.plainenglish.io/dodging-the-vercel-storage-tax-there-are-better-open-source-alternatives-ef04e537b598)
+- [Cloudflare/next-on-pages v1.0](https://github.com/cloudflare/next-on-pages)
+- [Next.js vs the world](https://memos.hawkhill.ventures/p/nextjs-vs-the-world)
+- [Limit and require props in components based on other props](https://nikolasbarwicki.com/articles/limit-require-props-components-based-on-other-props)
+- [SEO in Next.js 13 with Metadata API](https://nikolasbarwicki.com/articles/seo-in-next-js-13-with-metadata-api)
+- ["React from Another Dimension" by Dan Abramov at #RemixConf 2023 💿](https://www.youtube.com/watch?v=zMf_xeGPn6s)
+- [Build UI Series - Data fetching with React Server Components](https://buildui.com/series/react-server-components/building-a-users-table)
+- [The Next.js 13 App Directory and Server Components: What You Need to Know](https://blogs.shenyien.cyou/the-nextjs-13-app-directory-and-server-components)
+- [Introducing Legend-State 1.0: Build faster apps faster](https://legendapp.com/open-source/)
+- [How to Test Custom React Hooks with React Testing Library](https://www.builder.io/blog/test-custom-hooks-react-testing-library)
+- [Crafting a modern spotlight effect with React and CSS](https://www.julienthibeaut.xyz/blog/create-modern-spotlight-effect-with-react-css)
 - [Understanding React Concurrency](https://www.bbss.dev/posts/react-concurrency/)
+- [Remix 1.16.1](https://github.com/remix-run/remix/releases/tag/remix%401.16.1)
+- [Fullstack React Components – with no API](https://www.youtube.com/watch?v=OAmp3GTfZnU)
+- [Server Actions: NextJS 13.4's Best New Feature](https://www.youtube.com/watch?v=czvSZqnpTHs)
+
 - 👥 [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam, 2-6 Juin) nous offre -5% sur les entrées (code "ThisWeekInReact5") et -10% sur les [workshops](https://reactsummit.com/react-workshops) (code "THISWEEKINREACT")
 
 <SubscribeFormEmbed />
@@ -70,6 +104,14 @@ We’ll tackle handling common interview questions, approaching the topic of gen
 
 ## 📱 React-Native {#react-native}
 
+- [The App.js Conf Megathread](https://twitter.com/flexbox_/status/1657994812346499072)
+- [Metro symlinks](https://twitter.com/kadikraman/status/1656953939948892161)
+- [Bluesky Social App](https://github.com/bluesky-social/social-app): l'application Expo de Bluesky est maintenant open-source.
+- [Expo App.js announcements](https://twitter.com/expo/status/1656802035373850625)
+- [0.72.0-RC.3](https://github.com/facebook/react-native/releases/tag/v0.72.0-rc.3): "Golden" Release Candidate qui devrait devenir la 0.72 finale très prochainement.
+- [Remotion + React-Native](https://www.remotion.dev/native)
+- [Expo Router v2 lineup](https://twitter.com/Baconbrix/status/1656634363847507968)
+- [Messenger Desktop: Faster and Smaller by moving to React Native from Electron](https://developers.facebook.com/blog/post/2023/05/17/messenger-desktop-faster-and-smaller-by-moving-to-react-native-from-electron/)
 - 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -20% (code "REACTHEBDO").
 
 ---
@@ -92,7 +134,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Gère le state de ton application React avec Zustand](https://www.youtube.com/watch?v=x4vYO7Fn9kw)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -102,13 +144,21 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Advancing Interaction to Next Paint](https://web.dev/inp-cwv/)
+- [Web Platform Baseline - Brings clarity to information about browser support for web platform features.](https://web.dev/baseline/)
+- [What's new in CSS and UI: I/O 2023 Edition](https://developer.chrome.com/en/blog/whats-new-css-ui-2023/)
+- [6 CSS snippets every front-end developer should know in 2023](https://web.dev/6-css-snippets-every-front-end-developer-should-know-in-2023/)
+- [Updates from the 96th TC39 meeting](https://dev.to/hemanth/updates-from-the-96th-tc39-meeting-4goe)
+- [Bun 0.6.0](https://bun.sh/blog/bun-v0.6.0) + [The Bun Bundler](https://bun.sh/blog/bun-bundler)
+- [Unveiling the Magic: Exploring Reactivity Across Various Frameworks](https://www.builder.io/blog/reactivity-across-frameworks)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/BHolmesDev/status/1656866405713690626
+
+https://twitter.com/supabase/status/1656990071252295680
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
