--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
@@ -45,10 +45,18 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
+- [Building a modern design system in layers](https://blog.almaer.com/building-a-modern-design-system-in-layers/)
+- [Wakuwork => Waku](https://twitter.com/dai_shi/status/1660537733201248257)
+- [chadcn/ui Form](https://twitter.com/shadcn/status/1659639523960291328)
+- [I built a chart as a React Server Component](https://www.youtube.com/watch?v=3JB_qEk39w0)
+- [React Router increased Suspense support](https://twitter.com/remix_run/status/1658976420767604736)
+- [Astro 2.5](https://twitter.com/astrodotbuild/status/1659272785540128776)
+- [TypeScript 5.1 RC](https://devblogs.microsoft.com/typescript/announcing-typescript-5-1-rc/): la nouvelle version TypeScript qui permettra d'[améliorer le support JSX pour React](https://thisweekinreact.com/newsletter/142#react) est en release candidate.
+- [React-Three-Fiber Ultimate Lens Flare](https://twitter.com/Andersonmancini/status/1660625053497839622)
 - [Spotify - TV Spatial Navigation](https://engineering.atspotify.com/2023/05/tv-spatial-navigation/)
 - [Airbnb - Improving Performance with HTTP Streaming](https://medium.com/airbnb-engineering/improving-performance-with-http-streaming-ba9e72c66408)
 - [Using symbols to create type safe Remix handles without duck typing](https://www.wking.dev/library/using-symbols-to-create-type-safe-remix-handles-without-duck-typing)
-- [Remix Conf 2023 Playlist](https://www.youtube.com/watch?v=x-Wndjv040Q&list=PLXoynULbYuEBSoANKVl4nKzBBae7DM3JK)
+- [Remix Conf 2023 Playlist](https://www.youtube.com/playlist?list=PLXoynULbYuEBSoANKVl4nKzBBae7DM3JK)
 - [upgrade-remix](https://github.com/brophdawg11/upgrade-remix)
 - [Next.js Project Structure - New docs page](https://twitter.com/delba_oliveira/status/1659276340145582088)
 - [RSC Parser](https://rsc-parser.vercel.app/)
@@ -76,7 +84,7 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 - [How to Test Custom React Hooks with React Testing Library](https://www.builder.io/blog/test-custom-hooks-react-testing-library)
 - [Crafting a modern spotlight effect with React and CSS](https://www.julienthibeaut.xyz/blog/create-modern-spotlight-effect-with-react-css)
 - [Understanding React Concurrency](https://www.bbss.dev/posts/react-concurrency/)
-- [Remix 1.16.1](https://github.com/remix-run/remix/releases/tag/remix%401.16.1)
+- [Remix 1.16.1](https://twitter.com/remix_run/status/1658921729589415937)
 - [Fullstack React Components – with no API](https://www.youtube.com/watch?v=OAmp3GTfZnU)
 - [Server Actions: NextJS 13.4's Best New Feature](https://www.youtube.com/watch?v=czvSZqnpTHs)
 
@@ -104,12 +112,18 @@ We’ll tackle handling common interview questions, approaching the topic of gen
 
 ## 📱 React-Native {#react-native}
 
+- https://twitter.com/Baconbrix/status/1656960416965173253
+- https://twitter.com/Baconbrix/status/1656949151685398531
+- Evan highlights: https://twitter.com/Baconbrix/status/1657813793412448260
+- Skia highlights: https://twitter.com/wcandillon/status/1658032836685754368
+- [Improved debugging](https://twitter.com/cedric_dev/status/1657067956730249216) + https://twitter.com/cedric_dev/status/1658076614603730945
+- [Flashlight in open beta](https://twitter.com/almouro/status/1660587299200028672)
 - [The App.js Conf Megathread](https://twitter.com/flexbox_/status/1657994812346499072)
 - [Metro symlinks](https://twitter.com/kadikraman/status/1656953939948892161)
-- [Bluesky Social App](https://github.com/bluesky-social/social-app): l'application Expo de Bluesky est maintenant open-source.
+- [Bluesky App is now open-source](https://twitter.com/addyosmani/status/1658228255328190464): l'application Expo de Bluesky est maintenant open-source.
 - [Expo App.js announcements](https://twitter.com/expo/status/1656802035373850625)
 - [0.72.0-RC.3](https://github.com/facebook/react-native/releases/tag/v0.72.0-rc.3): "Golden" Release Candidate qui devrait devenir la 0.72 finale très prochainement.
-- [Remotion + React-Native](https://www.remotion.dev/native)
+- [Remotion + React-Native](https://twitter.com/JNYBGR/status/1657041691319336960)
 - [Expo Router v2 lineup](https://twitter.com/Baconbrix/status/1656634363847507968)
 - [Messenger Desktop: Faster and Smaller by moving to React Native from Electron](https://developers.facebook.com/blog/post/2023/05/17/messenger-desktop-faster-and-smaller-by-moving-to-react-native-from-electron/)
 - 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -20% (code "REACTHEBDO").
@@ -145,6 +159,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 ## 🔀 Autre {#other}
 
 - [Advancing Interaction to Next Paint](https://web.dev/inp-cwv/)
+- [WebKit Features in Safari 16.5](https://webkit.org/blog/14154/webkit-features-in-safari-16-5/)
 - [Web Platform Baseline - Brings clarity to information about browser support for web platform features.](https://web.dev/baseline/)
 - [What's new in CSS and UI: I/O 2023 Edition](https://developer.chrome.com/en/blog/whats-new-css-ui-2023/)
 - [6 CSS snippets every front-end developer should know in 2023](https://web.dev/6-css-snippets-every-front-end-developer-should-know-in-2023/)
@@ -159,6 +174,8 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 https://twitter.com/BHolmesDev/status/1656866405713690626
 
 https://twitter.com/supabase/status/1656990071252295680
+
+https://twitter.com/thekitze/status/1658173627425079297
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
