--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
@@ -45,49 +45,45 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
-- [Building a modern design system in layers](https://blog.almaer.com/building-a-modern-design-system-in-layers/)
-- [Wakuwork => Waku](https://twitter.com/dai_shi/status/1660537733201248257)
-- [chadcn/ui Form](https://twitter.com/shadcn/status/1659639523960291328)
-- [I built a chart as a React Server Component](https://www.youtube.com/watch?v=3JB_qEk39w0)
-- [React Router increased Suspense support](https://twitter.com/remix_run/status/1658976420767604736)
-- [Astro 2.5](https://twitter.com/astrodotbuild/status/1659272785540128776)
-- [TypeScript 5.1 RC](https://devblogs.microsoft.com/typescript/announcing-typescript-5-1-rc/): la nouvelle version TypeScript qui permettra d'[améliorer le support JSX pour React](https://thisweekinreact.com/newsletter/142#react) est en release candidate.
-- [React-Three-Fiber Ultimate Lens Flare](https://twitter.com/Andersonmancini/status/1660625053497839622)
-- [Spotify - TV Spatial Navigation](https://engineering.atspotify.com/2023/05/tv-spatial-navigation/)
-- [Airbnb - Improving Performance with HTTP Streaming](https://medium.com/airbnb-engineering/improving-performance-with-http-streaming-ba9e72c66408)
-- [Using symbols to create type safe Remix handles without duck typing](https://www.wking.dev/library/using-symbols-to-create-type-safe-remix-handles-without-duck-typing)
-- [Remix Conf 2023 Playlist](https://www.youtube.com/playlist?list=PLXoynULbYuEBSoANKVl4nKzBBae7DM3JK)
-- [upgrade-remix](https://github.com/brophdawg11/upgrade-remix)
-- [Next.js Project Structure - New docs page](https://twitter.com/delba_oliveira/status/1659276340145582088)
-- [RSC Parser](https://rsc-parser.vercel.app/)
-- [This Month in React (April 2023)](https://www.reactiflux.com/transcripts/tmir-april-2023)
-- [You Might Not Need React Query](https://tkdodo.eu/blog/you-might-not-need-react-query) + https://twitter.com/TkDodo/status/1659908975502950405
-- [Custom Fetcher Hooks are Remix's Typesafe RPCs](https://www.jacobparis.com/content/remix-rpc-pattern)
-- [The Epic Stack](https://www.epicweb.dev/epic-stack)
-- [Why I’m excited about Server Actions](https://andrewingram.net/posts/why-excited-about-server-actions)
-- [Typing React Context In TypeScript](https://claritydev.net/blog/typing-react-context-in-typescript)
-- [I gambled against React and lost (and I don’t regret a thing)](https://goauthentik.io/blog/2023-05-04-i-gambled-against-react-and-lost): évoque le choix d'utiliser Lit et les Web Components en 2018.
-- [The JavaScript Ecosystem Is Delightfully Weird](https://fly.io/blog/js-ecosystem-delightfully-wierd/)
-- [What is Next.js App Router & Is it ready for the main stage?](https://engineering.udacity.com/what-is-next-js-app-router-is-it-ready-for-the-main-stage-bed07ef9519f)
-- [Using Apollo Client with Next.js 13: releasing an official library to support the App Router](https://www.apollographql.com/blog/announcement/frontend/using-apollo-client-with-next-js-13-releasing-an-official-library-to-support-the-app-router/)
-- [React Global State as Local State](https://webup.org/blog/react-global-state-as-local-state/)
-- [React reconciliation: how it works and why should we care](https://www.developerway.com/posts/reconciliation-in-react)
-- [Dodging the Vercel Tax: How to use an open-source alternative for Serverless Postgres, Redis, and Blob Storage](https://javascript.plainenglish.io/dodging-the-vercel-storage-tax-there-are-better-open-source-alternatives-ef04e537b598)
-- [Cloudflare/next-on-pages v1.0](https://github.com/cloudflare/next-on-pages)
-- [Next.js vs the world](https://memos.hawkhill.ventures/p/nextjs-vs-the-world)
-- [Limit and require props in components based on other props](https://nikolasbarwicki.com/articles/limit-require-props-components-based-on-other-props)
-- [SEO in Next.js 13 with Metadata API](https://nikolasbarwicki.com/articles/seo-in-next-js-13-with-metadata-api)
-- ["React from Another Dimension" by Dan Abramov at #RemixConf 2023 💿](https://www.youtube.com/watch?v=zMf_xeGPn6s)
-- [Build UI Series - Data fetching with React Server Components](https://buildui.com/series/react-server-components/building-a-users-table)
-- [The Next.js 13 App Directory and Server Components: What You Need to Know](https://blogs.shenyien.cyou/the-nextjs-13-app-directory-and-server-components)
-- [Introducing Legend-State 1.0: Build faster apps faster](https://legendapp.com/open-source/)
-- [How to Test Custom React Hooks with React Testing Library](https://www.builder.io/blog/test-custom-hooks-react-testing-library)
-- [Crafting a modern spotlight effect with React and CSS](https://www.julienthibeaut.xyz/blog/create-modern-spotlight-effect-with-react-css)
-- [Understanding React Concurrency](https://www.bbss.dev/posts/react-concurrency/)
-- [Remix 1.16.1](https://twitter.com/remix_run/status/1658921729589415937)
-- [Fullstack React Components – with no API](https://www.youtube.com/watch?v=OAmp3GTfZnU)
-- [Server Actions: NextJS 13.4's Best New Feature](https://www.youtube.com/watch?v=czvSZqnpTHs)
-
+- 📖 [Next.js Project Structure - New docs page](https://twitter.com/delba_oliveira/status/1659276340145582088)
+- 🔨 [RSC Parser](https://rsc-parser.vercel.app/)
+- 👀 [React Router increased Suspense support](https://twitter.com/remix_run/status/1658976420767604736)
+- 📜 [Building a modern design system in layers](https://blog.almaer.com/building-a-modern-design-system-in-layers/)
+- 📜 [Spotify - TV Spatial Navigation](https://engineering.atspotify.com/2023/05/tv-spatial-navigation/)
+- 📜 [Airbnb - Improving Performance with HTTP Streaming](https://medium.com/airbnb-engineering/improving-performance-with-http-streaming-ba9e72c66408)
+- 📜 [Using symbols to create type safe Remix handles without duck typing](https://www.wking.dev/library/using-symbols-to-create-type-safe-remix-handles-without-duck-typing)
+- 📜 [Understanding React Concurrency](https://www.bbss.dev/posts/react-concurrency/)
+- 📜 [You Might Not Need React Query](https://tkdodo.eu/blog/you-might-not-need-react-query) + https://twitter.com/TkDodo/status/1659908975502950405
+- 📜 [Custom Fetcher Hooks are Remix's Typesafe RPCs](https://www.jacobparis.com/content/remix-rpc-pattern)
+- 📜 [Why I’m excited about Server Actions](https://andrewingram.net/posts/why-excited-about-server-actions)
+- 📜 [Typing React Context In TypeScript](https://claritydev.net/blog/typing-react-context-in-typescript)
+- 📜 [I gambled against React and lost (and I don’t regret a thing)](https://goauthentik.io/blog/2023-05-04-i-gambled-against-react-and-lost): évoque le choix d'utiliser Lit et les Web Components en 2018.
+- 📜 [The JavaScript Ecosystem Is Delightfully Weird](https://fly.io/blog/js-ecosystem-delightfully-wierd/)
+- 📜 [What is Next.js App Router & Is it ready for the main stage?](https://engineering.udacity.com/what-is-next-js-app-router-is-it-ready-for-the-main-stage-bed07ef9519f)
+- 📜 [Using Apollo Client with Next.js 13: releasing an official library to support the App Router](https://www.apollographql.com/blog/announcement/frontend/using-apollo-client-with-next-js-13-releasing-an-official-library-to-support-the-app-router/)
+- 📜 [React reconciliation: how it works and why should we care](https://www.developerway.com/posts/reconciliation-in-react)
+- 📜 [Dodging the Vercel Tax: How to use an open-source alternative for Serverless Postgres, Redis, and Blob Storage](https://javascript.plainenglish.io/dodging-the-vercel-storage-tax-there-are-better-open-source-alternatives-ef04e537b598)
+- 📜 [Next.js vs the world](https://memos.hawkhill.ventures/p/nextjs-vs-the-world)
+- 📜 [Limit and require props in components based on other props](https://nikolasbarwicki.com/articles/limit-require-props-components-based-on-other-props)
+- 📜 [SEO in Next.js 13 with Metadata API](https://nikolasbarwicki.com/articles/seo-in-next-js-13-with-metadata-api)
+- 📜 [Build UI Series - Data fetching with React Server Components](https://buildui.com/series/react-server-components/building-a-users-table)
+- 📜 [The Next.js 13 App Directory and Server Components: What You Need to Know](https://blogs.shenyien.cyou/the-nextjs-13-app-directory-and-server-components)
+- 📜 [How to Test Custom React Hooks with React Testing Library](https://www.builder.io/blog/test-custom-hooks-react-testing-library)
+- 📦 [TypeScript 5.1 RC](https://devblogs.microsoft.com/typescript/announcing-typescript-5-1-rc/): la nouvelle version TypeScript qui permettra d'[améliorer le support JSX pour React](https://thisweekinreact.com/newsletter/142#react) est en release candidate.
+- 📦 [The Epic Stack](https://www.epicweb.dev/epic-stack)
+- 📦 [Remix 1.16.1](https://twitter.com/remix_run/status/1658921729589415937)
+- 📦 [upgrade-remix](https://github.com/brophdawg11/upgrade-remix)
+- 📦 [Legend-State 1.0](https://legendapp.com/open-source/)
+- 📦 [chadcn/ui Form](https://twitter.com/shadcn/status/1659639523960291328)
+- 📦 [Astro 2.5](https://twitter.com/astrodotbuild/status/1659272785540128776)
+- 📦 [Cloudflare/next-on-pages v1.0](https://github.com/cloudflare/next-on-pages)
+- 📦 [React-Three-Fiber Ultimate Lens Flare](https://twitter.com/Andersonmancini/status/1660625053497839622)
+- 🎙️ [This Month in React (April 2023)](https://www.reactiflux.com/transcripts/tmir-april-2023)
+- 🎥 ["React from Another Dimension" by Dan Abramov at #RemixConf 2023 💿](https://www.youtube.com/watch?v=zMf_xeGPn6s)
+- 🎥 [I built a chart as a React Server Component](https://www.youtube.com/watch?v=3JB_qEk39w0)
+- 🎥 [Remix Conf 2023 Playlist](https://www.youtube.com/playlist?list=PLXoynULbYuEBSoANKVl4nKzBBae7DM3JK)
+- 🎥 [Fullstack React Components – with no API](https://www.youtube.com/watch?v=OAmp3GTfZnU)
+- 🎥 [Server Actions: NextJS 13.4's Best New Feature](https://www.youtube.com/watch?v=czvSZqnpTHs)
 - 👥 [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam, 2-6 Juin) nous offre -5% sur les entrées (code "ThisWeekInReact5") et -10% sur les [workshops](https://reactsummit.com/react-workshops) (code "THISWEEKINREACT")
 
 <SubscribeFormEmbed />
@@ -112,20 +108,21 @@ We’ll tackle handling common interview questions, approaching the topic of gen
 
 ## 📱 React-Native {#react-native}
 
+- 🎥 [Is This the Future of React Native? app.js Recap and Insights](https://www.youtube.com/watch?v=8ou9dq5HKHk)
 - https://twitter.com/Baconbrix/status/1656960416965173253
 - https://twitter.com/Baconbrix/status/1656949151685398531
 - Evan highlights: https://twitter.com/Baconbrix/status/1657813793412448260
 - Skia highlights: https://twitter.com/wcandillon/status/1658032836685754368
 - [Improved debugging](https://twitter.com/cedric_dev/status/1657067956730249216) + https://twitter.com/cedric_dev/status/1658076614603730945
 - [Flashlight in open beta](https://twitter.com/almouro/status/1660587299200028672)
-- [The App.js Conf Megathread](https://twitter.com/flexbox_/status/1657994812346499072)
 - [Metro symlinks](https://twitter.com/kadikraman/status/1656953939948892161)
-- [Bluesky App is now open-source](https://twitter.com/addyosmani/status/1658228255328190464): l'application Expo de Bluesky est maintenant open-source.
-- [Expo App.js announcements](https://twitter.com/expo/status/1656802035373850625)
-- [0.72.0-RC.3](https://github.com/facebook/react-native/releases/tag/v0.72.0-rc.3): "Golden" Release Candidate qui devrait devenir la 0.72 finale très prochainement.
-- [Remotion + React-Native](https://twitter.com/JNYBGR/status/1657041691319336960)
-- [Expo Router v2 lineup](https://twitter.com/Baconbrix/status/1656634363847507968)
-- [Messenger Desktop: Faster and Smaller by moving to React Native from Electron](https://developers.facebook.com/blog/post/2023/05/17/messenger-desktop-faster-and-smaller-by-moving-to-react-native-from-electron/)
+- 🧵 [The App.js Conf Megathread](https://twitter.com/flexbox_/status/1657994812346499072)
+- 👀 [Bluesky App is now open-source](https://twitter.com/addyosmani/status/1658228255328190464): l'application Expo de Bluesky est maintenant open-source.
+- 🧵 [Expo App.js announcements](https://twitter.com/expo/status/1656802035373850625)
+- 📦 [0.72.0-RC.3](https://github.com/facebook/react-native/releases/tag/v0.72.0-rc.3): "Golden" Release Candidate qui devrait devenir la 0.72 finale très prochainement.
+- 👀 [Remotion + React-Native](https://twitter.com/JNYBGR/status/1657041691319336960)
+- 👀 [Expo Router v2 lineup](https://twitter.com/Baconbrix/status/1656634363847507968)
+- 📜 [Messenger Desktop: Faster and Smaller by moving to React Native from Electron](https://developers.facebook.com/blog/post/2023/05/17/messenger-desktop-faster-and-smaller-by-moving-to-react-native-from-electron/)
 - 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -20% (code "REACTHEBDO").
 
 ---
@@ -148,11 +145,11 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-- [Gère le state de ton application React avec Zustand](https://www.youtube.com/watch?v=x4vYO7Fn9kw)
+- 📜 [TypeScript : Programmation de types](https://www.codeheroes.fr/2023/05/05/typescript-programmation-de-types/)
+- 🎥 [Gère le state de ton application React avec Zustand](https://www.youtube.com/watch?v=x4vYO7Fn9kw)
+- 🎥 [La plus grosse incompréhension de React expliquée!](https://www.youtube.com/watch?v=Mtl7agDQD60)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
 
 ---
 
