--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/146/index.mdx
@@ -45,7 +45,7 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
-- 📖 [Next.js Project Structure - New docs page](https://twitter.com/delba_oliveira/status/1659276340145582088)
+- 📖 [Next.js Project Structure](https://twitter.com/delba_oliveira/status/1659276340145582088): nouvelle page de doc.
 - 🔨 [RSC Parser](https://rsc-parser.vercel.app/)
 - 👀 [React Router increased Suspense support](https://twitter.com/remix_run/status/1658976420767604736)
 - 📜 [Building a modern design system in layers](https://blog.almaer.com/building-a-modern-design-system-in-layers/)
